--- a/.github/workflows/build-fantasytyx-bv.yml
+++ b/.github/workflows/build-fantasytyx-bv.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
     - name: Checkout CI repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@main
       with:
         path: ci-repo
 
@@ -27,13 +27,13 @@ jobs:
         echo "Commit hash: $(git rev-parse HEAD)"
 
     - name: Setup JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@main
       with:
         java-version: '17'
         distribution: 'temurin'
 
     - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
+      uses: android-actions/setup-android@main
 
     - name: Restore keystore from secrets
       env:
@@ -65,7 +65,7 @@ jobs:
         chmod +x gradlew
 
     - name: Cache Gradle dependencies
-      uses: actions/cache@v3
+      uses: actions/cache@main
       with:
         path: |
           ~/.gradle/caches
@@ -111,7 +111,7 @@ jobs:
         fi
 
     - name: Upload APK artifacts
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@main
       with:
         name: bv-app-release-${{ steps.report.outputs.version_name }}
         path: source-code/app/build/outputs/apk/**/*.apk
@@ -119,7 +119,7 @@ jobs:
 
     - name: Upload build logs
       if: always()
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@main
       with:
         name: build-logs
         path: |
@@ -140,7 +140,7 @@ jobs:
 
     - name: Create GitHub Release (Optional)
       if: success()
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@master
       with:
         files: source-code/app/build/outputs/apk/release/*.apk
         tag_name: ci-build-${{ github.run_id }}
