--- a/.github/workflows/build-fantasytyx-bv.yml
+++ b/.github/workflows/build-fantasytyx-bv.yml
@@ -1,62 +1,257 @@
 name: build-fantasytyx-bv
 
 on:
-  workflow_dispatch:  # 允许手动触发构建
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: '要构建的分支'
+        required: false
+        default: 'develop'
+      tag:
+        description: '要构建的标签（如果有）'
+        required: false
 
 jobs:
   build:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
+    - name: Setup workspace
+      run: |
+        echo "工作流开始时间: $(date)"
+        echo "构建仓库: xqqv5/fantasy-bv"
+        echo "构建分支: ${{ github.event.inputs.branch || 'develop' }}"
+        
+    - name: Checkout source code from xqqv5/fantasy-bv
       uses: actions/checkout@main
-      
-    - name: Set up JDK
+      with:
+        repository: xqqv5/fantasy-bv
+        ref: ${{ github.event.inputs.branch || 'develop' }}
+        token: ${{ secrets.REPO_ACCESS_TOKEN || secrets.GITHUB_TOKEN }}
+        path: ./fantasy-bv
+        fetch-depth: 0  # 获取完整历史记录
+        
+    - name: Set up JDK 21 (Latest LTS)
       uses: actions/setup-java@main
       with:
-        java-version: '21'  # 使用最新的LTS版本，您也可以改为 'latest'
-        distribution: 'temurin'  # Eclipse Temurin JDK
+        java-version: '21'
+        distribution: 'temurin'
+        cache: 'gradle'
         
-    - name: Set up Android SDK
+    - name: Setup Android SDK
       uses: android-actions/setup-android@main
-      
-    - name: Accept Android SDK licenses
+      with:
+        packages: |
+          platforms;android-34
+          build-tools;34.0.0
+          platform-tools
+          cmdline-tools;latest
+          
+    - name: Configure Android SDK
       run: |
-        yes | sdkmanager --licenses || true
-        sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+        # 创建必要的目录
+        mkdir -p ~/.android
+        touch ~/.android/repositories.cfg
+        
+        # 接受所有Android SDK许可证
+        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses 2>/dev/null || true
+        
+        # 验证Android SDK安装
+        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --list | head -20
+        
+    - name: Verify project structure
+      run: |
+        echo "项目目录结构:"
+        cd fantasy-bv && ls -la
+        
+        echo "检查Gradle包装器:"
+        if [ -f fantasy-bv/gradlew ]; then
+          echo "✅ Gradle包装器存在"
+          ls -la fantasy-bv/gradlew*
+        else
+          echo "❌ Gradle包装器不存在"
+          exit 1
+        fi
+        
+        echo "检查项目配置:"
+        if [ -f fantasy-bv/settings.gradle.kts ] || [ -f fantasy-bv/settings.gradle ]; then
+          echo "✅ Gradle设置文件存在"
+        else
+          echo "❌ Gradle设置文件不存在"
+          exit 1
+        fi
         
     - name: Make gradlew executable
-      run: chmod +x ./gradlew
-      
-    - name: Generate keystore file
       run: |
-        # 使用GitHub Secrets中的变量生成keystore
-        keytool -genkey -v \
-          -keystore keystore.jks \
-          -alias ${{ secrets.KEY_ALIAS }} \
-          -keyalg RSA \
-          -keysize 2048 \
-          -validity 10000 \
-          -storepass ${{ secrets.KEYSTORE_PASSWORD }} \
-          -keypass ${{ secrets.KEY_ALIAS_PASSWORD }} \
-          -dname "CN=Unknown, OU=Unknown, O=Unknown, L=Unknown, ST=Unknown, C=Unknown"
+        chmod +x fantasy-bv/gradlew
+        echo "Gradle包装器权限设置完成"
+        
+    - name: Generate keystore file for signing
+      env:
+        KEY_ALIAS: ${{ secrets.KEY_ALIAS || 'fantasytyx_key' }}
+        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+        KEY_ALIAS_PASSWORD: ${{ secrets.KEY_ALIAS_PASSWORD || secrets.KEYSTORE_PASSWORD }}
+      run: |
+        echo "生成keystore文件..."
+        
+        # 进入项目目录
+        cd fantasy-bv
+        
+        # 检查是否已有keystore文件
+        if [ -f keystore.jks ]; then
+          echo "⚠️  keystore.jks已存在，跳过生成"
+        else
+          echo "正在生成新的keystore.jks文件..."
           
+          # 如果密码未设置，生成随机密码
+          if [ -z "$KEYSTORE_PASSWORD" ]; then
+            echo "未设置KEYSTORE_PASSWORD secret，使用随机密码"
+            KEYSTORE_PASSWORD=$(openssl rand -base64 32)
+            KEY_ALIAS_PASSWORD=$KEYSTORE_PASSWORD
+          fi
+          
+          # 生成keystore文件
+          keytool -genkeypair \
+            -v \
+            -keystore keystore.jks \
+            -alias "$KEY_ALIAS" \
+            -keyalg RSA \
+            -keysize 4096 \
+            -validity 10000 \
+            -storepass "$KEYSTORE_PASSWORD" \
+            -keypass "$KEY_ALIAS_PASSWORD" \
+            -dname "CN=Fantasytyx, OU=Android, O=Fantasytyx, L=Unknown, ST=Unknown, C=CN" \
+            -noprompt
+          
+          echo "✅ keystore.jks生成成功"
+          ls -la keystore.jks
+        fi
+        
     - name: Create signing.properties file
+      env:
+        KEY_ALIAS: ${{ secrets.KEY_ALIAS || 'fantasytyx_key' }}
+        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD || 'android' }}
+        KEY_ALIAS_PASSWORD: ${{ secrets.KEY_ALIAS_PASSWORD || secrets.KEYSTORE_PASSWORD || 'android' }}
       run: |
+        echo "创建signing.properties文件..."
+        
+        # 进入项目目录
+        cd fantasy-bv
+        
+        # 创建signing.properties文件
         cat > signing.properties << EOF
+        # 自动生成的签名配置
+        # 生成时间: $(date)
         keystore.path=./keystore.jks
-        keystore.pwd=${{ secrets.KEYSTORE_PASSWORD }}
-        keystore.alias=${{ secrets.KEY_ALIAS }}
-        keystore.alias_pwd=${{ secrets.KEY_ALIAS_PASSWORD }}
+        keystore.pwd=$KEYSTORE_PASSWORD
+        keystore.alias=$KEY_ALIAS
+        keystore.alias_pwd=$KEY_ALIAS_PASSWORD
         EOF
         
+        echo "✅ signing.properties创建成功"
+        echo "文件内容（密码已隐藏）:"
+        sed 's/=.*/=***/g' signing.properties
+        
+    - name: Cache Gradle dependencies
+      uses: actions/cache@main
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+          fantasy-bv/.gradle
+        key: ${{ runner.os }}-gradle-${{ hashFiles('fantasy-bv/gradle/wrapper/gradle-wrapper.properties', 'fantasy-bv/build.gradle*', 'fantasy-bv/settings.gradle*', 'fantasy-bv/app/build.gradle*') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+          
     - name: Build Release APK
       run: |
-        ./gradlew clean assembleRelease
-        ls -la app/build/outputs/apk/release/
+        echo "开始构建Release APK..."
         
-    - name: Upload APK artifact
+        # 进入项目目录
+        cd fantasy-bv
+        
+        # 清理并构建
+        ./gradlew clean assembleRelease --no-daemon --stacktrace
+        
+        echo "✅ 构建完成"
+        
+        # 显示构建结果
+        echo "构建输出文件:"
+        find . -name "*.apk" -type f | xargs ls -lh
+        find . -name "*.aab" -type f | xargs ls -lh
+        
+    - name: Collect build artifacts
+      run: |
+        echo "收集构建产物..."
+        
+        # 创建产物目录
+        mkdir -p artifacts
+        
+        # 复制APK文件
+        if ls fantasy-bv/app/build/outputs/apk/release/*.apk 1> /dev/null 2>&1; then
+          cp fantasy-bv/app/build/outputs/apk/release/*.apk artifacts/
+          echo "APK文件已复制到artifacts目录"
+        else
+          echo "未找到APK文件，尝试在其他位置查找..."
+          find fantasy-bv -name "*.apk" -type f -exec cp {} artifacts/ \;
+        fi
+        
+        # 复制AAB文件（如果有）
+        if ls fantasy-bv/app/build/outputs/bundle/release/*.aab 1> /dev/null 2>&1; then
+          cp fantasy-bv/app/build/outputs/bundle/release/*.aab artifacts/
+          echo "AAB文件已复制到artifacts目录"
+        fi
+        
+        # 显示收集到的产物
+        echo "收集到的构建产物:"
+        ls -la artifacts/
+        
+        # 记录构建信息
+        echo "构建信息:" > artifacts/build-info.txt
+        echo "仓库: xqqv5/fantasy-bv" >> artifacts/build-info.txt
+        echo "分支: ${{ github.event.inputs.branch || 'develop' }}" >> artifacts/build-info.txt
+        echo "构建时间: $(date)" >> artifacts/build-info.txt
+        echo "工作流运行ID: ${{ github.run_id }}" >> artifacts/build-info.txt
+        echo "提交哈希: $(cd fantasy-bv && git rev-parse HEAD)" >> artifacts/build-info.txt
+        
+    - name: Upload APK artifacts
       uses: actions/upload-artifact@main
       with:
-        name: fantasytyx-bv-apk
-        path: app/build/outputs/apk/release/*.apk
+        name: fantasytyx-bv-apk-${{ github.run_number }}-${{ github.run_attempt }}
+        path: artifacts/*
+        retention-days: 30
+        if-no-files-found: error
+        
+    - name: Create GitHub Release (如果指定了标签)
+      if: github.event.inputs.tag != ''
+      uses: softprops/action-gh-release@master
+      with:
+        tag_name: ${{ github.event.inputs.tag }}
+        name: Fantasytyx BV ${{ github.event.inputs.tag }}
+        body: |
+          自动构建版本: ${{ github.event.inputs.tag }}
+          构建时间: $(date)
+          源仓库: xqqv5/fantasy-bv
+          分支: ${{ github.event.inputs.branch || 'develop' }}
+          
+          构建包含:
+          - APK安装包
+          - 构建信息
+        draft: false
+        prerelease: false
+        files: artifacts/*
+        
+    - name: Notify build completion (可选)
+      if: success()
+      run: |
+        echo "🎉 Fantasytyx BV 构建成功完成!"
+        echo "构建产物已上传到GitHub Artifacts"
+        echo "工作流运行ID: ${{ github.run_id }}"
+        echo "查看Artifacts: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        
+    - name: Notify build failure (可选)
+      if: failure()
+      run: |
+        echo "❌ Fantasytyx BV 构建失败!"
+        echo "请检查构建日志以获取详细信息"
+        echo "工作流运行ID: ${{ github.run_id }}"
