--- a/.github/workflows/build-fantasytyx-bv-no1.yml
+++ b/.github/workflows/build-fantasytyx-bv-no1.yml
@@ -42,15 +42,19 @@ jobs:
         mkdir -p $HOME/android-sdk/cmdline-tools
         unzip -q cmdline-tools.zip -d $HOME/android-sdk/cmdline-tools
         mv $HOME/android-sdk/cmdline-tools/cmdline-tools $HOME/android-sdk/cmdline-tools/latest
-        
         # 设置环境变量
         echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
         echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
         echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
         echo "$HOME/android-sdk/build-tools/$ANDROID_BUILD_TOOLS" >> $GITHUB_PATH
-        
         # 接受SDK许可证
         yes | sdkmanager --licenses || true
+
+    #- name: Setup Android SDK (最简单的方法)
+    #  uses: android-actions/setup-android@main
+    #  with:
+    #    api-level: ${{ env.ANDROID_COMPILE_SDK }}
+    #    build-tools: ${{ env.ANDROID_BUILD_TOOLS }}
 
     - name: Install required Android SDK components
       run: |
@@ -58,6 +62,14 @@ jobs:
         sdkmanager "platform-tools"
         sdkmanager "build-tools;$ANDROID_BUILD_TOOLS"
         sdkmanager "cmdline-tools;latest"
+        
+    - name: Fix SDK path conflict
+      run: |
+        # 确保只有一个SDK路径
+        echo "ANDROID_SDK_ROOT=$ANDROID_HOME" >> $GITHUB_ENV
+        echo "清理后的环境变量:"
+        echo "ANDROID_HOME=$ANDROID_HOME"
+        echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
 
     - name: Create keystore and signing properties
       run: |
